--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.1",
-    "@types/node": "^12.0.0",
+    "@types/node": "^14.14.35",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
@@ -18,6 +18,7 @@
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
+    "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
